[tool.poetry]
name = "jay-lint"
version = "0.1.0"
description = "Jay's personal linter"
authors = ["Jay Choy <choyzhengjay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
